--- a/style.css
+++ b/style.css
@@ -57,9 +57,17 @@ table {
 }
 
 #monitor {
-    background-image: url(img\monitor.jpg);
+    background-image: url(img/monitor.jpg);
 }
 
 #graph {
-    background-image: url(img\graph.jpg);
+    background-image: url(img/graph.jpg);
+}
+
+h3 {
+    color:white;
+}
+
+#suggestion {
+    color: lightgray;
 }
